--- a/internal/codegen/golang/templates/pgx/dbCode.tmpl
+++ b/internal/codegen/golang/templates/pgx/dbCode.tmpl
@@ -34,4 +34,10 @@ func (q *Queries) WithTx(tx pgx.Tx) *Queries {
 	}
 }
 {{end}}
+
+{{if .ExposeDbConnection}}
+func (q *Queries) Conn() DBTX {
+	return q.db
+}
+{{end}}
 {{end}}
