--- a/internal/codegen/golang/templates/pgx/queryCode.tmpl
+++ b/internal/codegen/golang/templates/pgx/queryCode.tmpl
@@ -39,7 +39,7 @@ func (q *Queries) {{.MethodName}}(ctx context.Context, {{.Arg.Pair}}) ({{.Ret.De
 	err := row.Scan({{.Ret.Scan}})
 	{{- if $.WrapErrors}}
 	if err != nil {
-		err = fmt.Errorf("error executing query {{.MethodName}}: %w", err)
+		err = fmt.Errorf("query {{.MethodName}}: %w", err)
 	}
 	{{- end}}
 	return {{.Ret.ReturnName}}, err
@@ -57,7 +57,7 @@ func (q *Queries) {{.MethodName}}(ctx context.Context, {{.Arg.Pair}}) ([]{{.Ret.
 	rows, err := q.db.Query(ctx, {{.ConstantName}}, {{.Arg.Params}})
 {{- end}}
 	if err != nil {
-		return nil, {{if $.WrapErrors}}fmt.Errorf("error executing query {{.MethodName}}: %w", err){{else}}err{{end}}
+		return nil, {{if $.WrapErrors}}fmt.Errorf("query {{.MethodName}}: %w", err){{else}}err{{end}}
 	}
 	defer rows.Close()
 	{{- if $.EmitEmptySlices}}
@@ -68,12 +68,12 @@ func (q *Queries) {{.MethodName}}(ctx context.Context, {{.Arg.Pair}}) ([]{{.Ret.
 	for rows.Next() {
 		var {{.Ret.Name}} {{.Ret.Type}}
 		if err := rows.Scan({{.Ret.Scan}}); err != nil {
-			return nil, {{if $.WrapErrors}}fmt.Errorf("error executing query {{.MethodName}}: %w", err){{else}}err{{end}}
+			return nil, {{if $.WrapErrors}}fmt.Errorf("query {{.MethodName}}: %w", err){{else}}err{{end}}
 		}
 		items = append(items, {{.Ret.ReturnName}})
 	}
 	if err := rows.Err(); err != nil {
-		return nil, {{if $.WrapErrors}}fmt.Errorf("error executing query {{.MethodName}}: %w", err){{else}}err{{end}}
+		return nil, {{if $.WrapErrors}}fmt.Errorf("query {{.MethodName}}: %w", err){{else}}err{{end}}
 	}
 	return items, nil
 }
@@ -89,7 +89,7 @@ func (q *Queries) {{.MethodName}}(ctx context.Context, db DBTX, {{.Arg.Pair}}) e
 func (q *Queries) {{.MethodName}}(ctx context.Context, {{.Arg.Pair}}) error {
 	_, err := q.db.Exec(ctx, {{.ConstantName}}, {{.Arg.Params}})
 {{- end}}
-	return {{if $.WrapErrors}}fmt.Errorf("error executing query {{.MethodName}}: %w", err){{else}}err{{end}}
+	return {{if $.WrapErrors}}fmt.Errorf("query {{.MethodName}}: %w", err){{else}}err{{end}}
 }
 {{end}}
 
@@ -104,7 +104,7 @@ func (q *Queries) {{.MethodName}}(ctx context.Context, {{.Arg.Pair}}) (int64, er
 	result, err := q.db.Exec(ctx, {{.ConstantName}}, {{.Arg.Params}})
 {{- end}}
 	if err != nil {
-		return 0, {{if $.WrapErrors}}fmt.Errorf("error executing query {{.MethodName}}: %w", err){{else}}err{{end}}
+		return 0, {{if $.WrapErrors}}fmt.Errorf("query {{.MethodName}}: %w", err){{else}}err{{end}}
 	}
 	return result.RowsAffected(), nil
 }
@@ -122,7 +122,7 @@ func (q *Queries) {{.MethodName}}(ctx context.Context, {{.Arg.Pair}}) (pgconn.Co
 {{- end}}
 	{{- if $.WrapErrors}}
 	if err != nil {
-		err = fmt.Errorf("error executing query {{.MethodName}}: %w", err)
+		err = fmt.Errorf("query {{.MethodName}}: %w", err)
 	}
 	return result, err
 	{{- end}}
