--- a/internal/codegen/golang/templates/stdlib/queryCode.tmpl
+++ b/internal/codegen/golang/templates/stdlib/queryCode.tmpl
@@ -30,7 +30,7 @@ func (q *Queries) {{.MethodName}}(ctx context.Context, {{ dbarg }} {{.Arg.Pair}}
 	err := row.Scan({{.Ret.Scan}})
 	{{- if $.WrapErrors}}
 	if err != nil {
-		err = fmt.Errorf("error executing query {{.MethodName}}: %w", err)
+		err = fmt.Errorf("query {{.MethodName}}: %w", err)
 	}
 	{{- end}}
 	return {{.Ret.ReturnName}}, err
@@ -43,7 +43,7 @@ func (q *Queries) {{.MethodName}}(ctx context.Context, {{ dbarg }} {{.Arg.Pair}}
 func (q *Queries) {{.MethodName}}(ctx context.Context, {{ dbarg }} {{.Arg.Pair}}) ([]{{.Ret.DefineType}}, error) {
     {{- template "queryCodeStdExec" . }}
     if err != nil {
-        return nil, {{if $.WrapErrors}}fmt.Errorf("error executing query {{.MethodName}}: %w", err){{else}}err{{end}}
+        return nil, {{if $.WrapErrors}}fmt.Errorf("query {{.MethodName}}: %w", err){{else}}err{{end}}
     }
     defer rows.Close()
     {{- if $.EmitEmptySlices}}
@@ -54,15 +54,15 @@ func (q *Queries) {{.MethodName}}(ctx context.Context, {{ dbarg }} {{.Arg.Pair}}
     for rows.Next() {
         var {{.Ret.Name}} {{.Ret.Type}}
         if err := rows.Scan({{.Ret.Scan}}); err != nil {
-            return nil, {{if $.WrapErrors}}fmt.Errorf("error executing query {{.MethodName}}: %w", err){{else}}err{{end}}
+            return nil, {{if $.WrapErrors}}fmt.Errorf("query {{.MethodName}}: %w", err){{else}}err{{end}}
         }
         items = append(items, {{.Ret.ReturnName}})
     }
     if err := rows.Close(); err != nil {
-        return nil, {{if $.WrapErrors}}fmt.Errorf("error executing query {{.MethodName}}: %w", err){{else}}err{{end}}
+        return nil, {{if $.WrapErrors}}fmt.Errorf("query {{.MethodName}}: %w", err){{else}}err{{end}}
     }
     if err := rows.Err(); err != nil {
-        return nil, {{if $.WrapErrors}}fmt.Errorf("error executing query {{.MethodName}}: %w", err){{else}}err{{end}}
+        return nil, {{if $.WrapErrors}}fmt.Errorf("query {{.MethodName}}: %w", err){{else}}err{{end}}
     }
     return items, nil
 }
@@ -75,7 +75,7 @@ func (q *Queries) {{.MethodName}}(ctx context.Context, {{ dbarg }} {{.Arg.Pair}}
     {{- template "queryCodeStdExec" . }}
     {{- if $.WrapErrors}}
     if err != nil {
-        err = fmt.Errorf("error executing query {{.MethodName}}: %w", err)
+        err = fmt.Errorf("query {{.MethodName}}: %w", err)
     }
     {{- end}}
     return err
@@ -88,7 +88,7 @@ func (q *Queries) {{.MethodName}}(ctx context.Context, {{ dbarg }} {{.Arg.Pair}}
 func (q *Queries) {{.MethodName}}(ctx context.Context, {{ dbarg }} {{.Arg.Pair}}) (int64, error) {
     {{- template "queryCodeStdExec" . }}
     if err != nil {
-        return 0, {{if $.WrapErrors}}fmt.Errorf("error executing query {{.MethodName}}: %w", err){{else}}err{{end}}
+        return 0, {{if $.WrapErrors}}fmt.Errorf("query {{.MethodName}}: %w", err){{else}}err{{end}}
     }
     return result.RowsAffected()
 }
@@ -100,7 +100,7 @@ func (q *Queries) {{.MethodName}}(ctx context.Context, {{ dbarg }} {{.Arg.Pair}}
 func (q *Queries) {{.MethodName}}(ctx context.Context, {{ dbarg }} {{.Arg.Pair}}) (int64, error) {
     {{- template "queryCodeStdExec" . }}
     if err != nil {
-        return 0, {{if $.WrapErrors}}fmt.Errorf("error executing query {{.MethodName}}: %w", err){{else}}err{{end}}
+        return 0, {{if $.WrapErrors}}fmt.Errorf("query {{.MethodName}}: %w", err){{else}}err{{end}}
     }
     return result.LastInsertId()
 }
@@ -113,7 +113,7 @@ func (q *Queries) {{.MethodName}}(ctx context.Context, {{ dbarg }} {{.Arg.Pair}}
     {{- template "queryCodeStdExec" . }}
     {{- if $.WrapErrors}}
     if err != nil {
-        err = fmt.Errorf("error executing query {{.MethodName}}: %w", err)
+        err = fmt.Errorf("query {{.MethodName}}: %w", err)
     }
     return result, err
     {{- end}}
