Add Begin to pgx db template

--- a/internal/codegen/golang/templates/pgx/dbCode.tmpl
+++ b/internal/codegen/golang/templates/pgx/dbCode.tmpl
@@ -1,6 +1,8 @@
 {{define "dbCodeTemplatePgx"}}
 
 type DBTX interface {
+	Begin(context.Context) (pgx.Tx, error)
+	BeginTx(context.Context, txOptions TxOptions) (pgx.Tx, error)
 	Exec(context.Context, string, ...interface{}) (pgconn.CommandTag, error)
 	Query(context.Context, string, ...interface{}) (pgx.Rows, error)
 	QueryRow(context.Context, string, ...interface{}) pgx.Row
@@ -32,6 +34,20 @@ func (q *Queries) WithTx(tx pgx.Tx) *Queries {
 	return &Queries{
 		db: tx,
 	}
+}
+func (q *Queries) Begin(ctx context.Context) (*Queries, error) {
+	tx, err := q.db.Begin(ctx)
+	if (err != nil {
+		return nil, err
+	}
+	return q.WithTx(tx), nil
+}
+func (q *Queries) BeginTx(ctx context.Context, txOptions TxOptions) (*Queries, error) {
+	tx, err := q.db.BeginTx(ctx, txOptions)
+	if (err != nil {
+		return nil, err
+	}
+	return q.WithTx(tx), nil
 }
 {{end}}
 {{end}}
