--- a/internal/codegen/golang/templates/template.tmpl
+++ b/internal/codegen/golang/templates/template.tmpl
@@ -25,6 +25,8 @@ import (
 
 {{if .SQLDriver.IsPGX }}
 	{{- template "dbCodeTemplatePgx" .}}
+{{else if .SQLDriver.IsYDBGoSDK }}
+	{{- template "dbCodeTemplateYDB" .}}
 {{else}}
 	{{- template "dbCodeTemplateStd" .}}
 {{end}}
@@ -57,6 +59,8 @@ import (
 {{define "interfaceCode"}}
 	{{if .SQLDriver.IsPGX }}
 		{{- template "interfaceCodePgx" .}}
+	{{else if .SQLDriver.IsYDBGoSDK }}
+		{{- template "interfaceCodeYDB" .}}
 	{{else}}
 		{{- template "interfaceCodeStd" .}}
 	{{end}}
@@ -188,6 +192,8 @@ import (
 {{define "queryCode"}}
 {{if .SQLDriver.IsPGX }}
     {{- template "queryCodePgx" .}}
+{{else if .SQLDriver.IsYDBGoSDK }}
+    {{- template "queryCodeYDB" .}}
 {{else}}
     {{- template "queryCodeStd" .}}
 {{end}}
